Change location info to GeoJSON Point objects

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -5,7 +5,7 @@ items:
       img: /assets/img/team/DestinyWest.jpg
       mail: destiny@aerofleetone.com
       linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
-      latlong: [39.771370, -104.981852]
+      latlong: { type: "Point", coordinates: [-104.981852, 39.771370] }
       text: >
           A passion for aviation motivates Destiny as she enacts our ambitious business plan. She is our main public voice, administrative organizer, and strategic fulcrum.
     - name: Greg Maud
@@ -14,7 +14,7 @@ items:
       img: /assets/img/team/GregMaud.jpg
       mail: greg@aerofleetone.com
       linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
-      latlong: [39.749668, -105.216019]
+      latlong: { type: "Point", coordinates: [-105.216019, 39.749668] }
       text: >
           Greg brings over 20 years international experience in strategy and corporate development to Aero Fleet One. He helps develop and implement our acquisition strategy.
     - name: Maria Dyatchyna
@@ -23,7 +23,11 @@ items:
       img: /assets/img/team/MariaDyatchyna.jpg
       mail: maria@aerofleetone.com
       linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
-      latlong: [50.436699619840184, 30.51481603417014]
+      latlong:
+          {
+              type: "Point",
+              coordinates: [30.51481603417014, 50.436699619840184],
+          }
       text: >
           Maria utilizes her significant experience in business development and deal-making to keep Aero Fleet One ahead of the game. She is the person to contact for any of our international affairs.
     - name: Allan Dosan
@@ -32,7 +36,11 @@ items:
       img: /assets/img/team/AllanDosan.jpg
       mail: allan@aerofleetone.com
       linkedin: https://www.linkedin.com/in/allandosan/
-      latlong: [44.98306165100913, -93.26148006478746]
+      latlong:
+          {
+              type: "Point",
+              coordinates: [-93.26148006478746, 44.98306165100913],
+          }
       text: >
           Allan brings his strong background in IT integrations and cybersecurity to Aero Fleet One. He acts as our point person for all things UAS. He is our resident futurist, exploring new market possibilities.
     - name: Mark Erjavec
@@ -41,7 +49,11 @@ items:
       img: /assets/img/team/MarkErjavec.jpg
       mail: mark@aerofleetone.com
       linkedin: https://www.linkedin.com/in/markerjavec/
-      latlong: [39.74883535119338, -105.01637690875211]
+      latlong:
+          {
+              type: "Point",
+              coordinates: [-105.01637690875211, 39.74883535119338],
+          }
       text: >
           Mark has provided the seed and continues to help this vision grow. While managing our funding and resources, he keeps us all on track
     - name: Ana Garcia
@@ -50,7 +62,7 @@ items:
       img: /assets/img/team/AnaGarcia.jpg
       mail: ana@aerofleetone.com
       linkedin: https://www.linkedin.com/in/ana-garcia4/
-      latlong: [-21.158780, -47.820990]
+      latlong: { type: "Point", coordinates: [-47.820990, -21.158780] }
       text: >-
           Ana is an experienced business manager in the fields of agriculture and aviation. She helps develop and implement our business strategy in Central and South America.
     - name: Yuriy Sherayzen
@@ -59,7 +71,7 @@ items:
       img: /assets/img/team/YuriySherayzen.png
       mail: yuriy@aerofleetone.com
       linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
-      latlong: [44.943610, -93.368290]
+      latlong: { type: "Point", coordinates: [-93.368290, 44.943610] }
       text: >-
           Yuriy is an experienced business analyst who helps guide our team as we move 
           forward with mergers and acquisitions.
@@ -69,7 +81,7 @@ items:
       img: /assets/img/team/DionasSilva.jpg
       mail: dionas@aerofleetone.com
       linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
-      latlong: [-21.176630, -47.820839]
+      latlong: { type: "Point", coordinates: [-47.820839, -21.176630] }
       text: >-
           As an expert agronomist and an experienced UAS pilot, Dionas is our pioneer in Brazil. He manages partnership relations in the Brazilian drone and agtech spaces.
     - name: Matheus Picinin
@@ -78,7 +90,7 @@ items:
       img: /assets/img/team/MatheusPicinin.jpg
       mail: matheus@aerofleetone.com
       linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
-      latlong: [53.349804, -6.260310]
+      latlong: { type: "Point", coordinates: [-6.260310, 53.349804] }
       text: >-
           Matheus uses his experience and training in digital media marketing to shape our brand and online presence. He manages our content staff and press relations.
     - name: Matthew Lessard
@@ -86,6 +98,6 @@ items:
       title: Strategic Advisor
       img: /assets/img/team/MatthewLessard.jpg
       linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
-      latlong: [44.1835832, -94.047492]
+      latlong: { type: "Point", coordinates: [-94.047492, 44.1835832] }
       text: >-
           Based in Minnesota, Matthew is an executive leader and entrepreneur with over 20 years of business management, financial oversight and analysis, business development, private equity, and international business experience in various countries including the US, Brazil, Mexico, and Europe.
