--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-    name: git-gateway
-    branch: cms # Branch to update (optional; defaults to master)
-    local_backend: true
+    name: github
+    repo: mesabafinance/aerofleetone.com
 publish_mode: editorial_workflow
 media_folder: "assets/uploads"
 collections:
