--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,7 +44,7 @@ collections:
             name: "team"
             file: "_data/staff.yml"
             fields:
-                - label: "Staff members"
+                - label: "Team members"
                   name: "items"
                   widget: "list"
                   fields:
