--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
     name: git-gateway
-    repo: cms
+    repo: admin
 publish_mode: editorial_workflow
 media_folder: "assets/uploads"
 collections:
