Update text and Matheus image

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -26,7 +26,7 @@ items:
                 - src: /assets/img/aerial-application-spraying-pesticides.jpg
                   text: "Common Assets: Relieving capital expenditures and overhead pressures."
                 - src: /assets/img/smart-farming-technology-agriculture.jpg
-                  text: "Common Goals: Utilizing synergies to make life easier at individual locations."
+                  text: "Common Goals: Utilizing synergies to make work easier at individual locations."
                 - src: /assets/img/crop-duster-agricultural-aviation.jpg
                   text: "Common Expertise: Integrating strategic technologies and best practices to increase efficiency."
             about:
