--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -1,5 +1,5 @@
 items:
-    - name: Destiny West
+    - full_name: Destiny West
       active: True
       title: President
       img: /assets/img/team/DestinyWest.jpg
@@ -10,7 +10,7 @@ items:
           coordinates: [-104.981852, 39.771370]
       text: >
           A passion for aviation motivates Destiny as she enacts our ambitious business plan. She is our main public voice, administrative organizer, and strategic fulcrum.
-    - name: Greg Maud
+    - full_name: Greg Maud
       active: True
       title: Corporate Development
       img: /assets/img/team/GregMaud.jpg
@@ -21,7 +21,7 @@ items:
           coordinates: [-105.216019, 39.749668]
       text: >
           Greg brings over 20 years international experience in strategy and corporate development to Aero Fleet One. He helps develop and implement our acquisition strategy.
-    - name: Maria Dyatchyna
+    - full_name: Maria Dyatchyna
       active: True
       title: Research and Expansion
       img: /assets/img/team/MariaDyatchyna.jpg
@@ -32,7 +32,7 @@ items:
           coordinates: [30.51481603417014, 50.436699619840184]
       text: >
           Maria utilizes her significant experience in business development and deal-making to keep Aero Fleet One ahead of the game. She is the person to contact for any of our international affairs.
-    - name: Allan Dosan
+    - full_name: Allan Dosan
       active: True
       title: Tech and Market Development
       img: /assets/img/team/AllanDosan.jpg
@@ -43,7 +43,7 @@ items:
           coordinates: [-93.26148006478746, 44.98306165100913]
       text: >
           Allan brings his strong background in IT integrations and cybersecurity to Aero Fleet One. He acts as our point person for all things UAS. He is our resident futurist, exploring new market possibilities.
-    - name: Mark Erjavec
+    - full_name: Mark Erjavec
       active: True
       title: Finance
       img: /assets/img/team/MarkErjavec.jpg
@@ -54,7 +54,7 @@ items:
           coordinates: [-105.01637690875211, 39.74883535119338]
       text: >
           Mark has provided the seed and continues to help this vision grow. While managing our funding and resources, he keeps us all on track
-    - name: Ana Garcia
+    - full_name: Ana Garcia
       active: True
       title: Business Development Latin America
       img: /assets/img/team/AnaGarcia.jpg
@@ -65,7 +65,7 @@ items:
           coordinates: [-47.820990, -21.158780]
       text: >-
           Ana is an experienced business manager in the fields of agriculture and aviation. She helps develop and implement our business strategy in Central and South America.
-    - name: Yuriy Sherayzen
+    - full_name: Yuriy Sherayzen
       active: False
       title: Strategist
       img: /assets/img/team/YuriySherayzen.png
@@ -77,7 +77,7 @@ items:
       text: >-
           Yuriy is an experienced business analyst who helps guide our team as we move 
           forward with mergers and acquisitions.
-    - name: Dionas Silva
+    - full_name: Dionas Silva
       active: True
       title: Brazilian Representative
       img: /assets/img/team/DionasSilva.jpg
@@ -88,7 +88,7 @@ items:
           coordinates: [-47.820839, -21.176630]
       text: >-
           As an expert agronomist and an experienced UAS pilot, Dionas is our pioneer in Brazil. He manages partnership relations in the Brazilian drone and agtech spaces.
-    - name: Matheus Picinin
+    - full_name: Matheus Picinin
       active: True
       title: Marketing Coordinator
       img: /assets/img/team/MatheusPicinin.jpg
@@ -99,7 +99,7 @@ items:
           coordinates: [-6.260310, 53.349804]
       text: >-
           Matheus uses his experience and training in digital media marketing to shape our brand and online presence. He manages our content staff and press relations.
-    - name: Matthew Lessard
+    - full_name: Matthew Lessard
       active: true
       title: Strategic Advisor
       img: /assets/img/team/MatthewLessard.jpg
