Add location widget and empty datapoint to yml file

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -1,151 +1,166 @@
 items:
-  - full_name: Simon Testing
-    title: Chief Tester
-    mail: test@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/smnwltr
-    text: Hello Bio
-    active: false
-  - full_name: Destiny West
-    active: true
-    title: President
-    img: /assets/img/team/DestinyWest.jpg
-    mail: destiny@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
-    latlong:
-      type: Point
-      coordinates:
-        - -104.981852
-        - 39.77137
-    text: >
-      A passion for aviation motivates Destiny as she enacts our ambitious
-      business plan. She is our main public voice, administrative organizer, and
-      strategic fulcrum.
-  - full_name: Greg Maud
-    active: true
-    title: Corporate Development
-    img: /assets/img/team/GregMaud.jpg
-    mail: greg@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
-    latlong:
-      type: Point
-      coordinates:
-        - -105.216019
-        - 39.749668
-    text: >
-      Greg brings over 20 years international experience in strategy and
-      corporate development to Aero Fleet One. He helps develop and implement
-      our acquisition strategy.
-  - full_name: Maria Dyatchyna
-    active: true
-    title: Research and Expansion
-    img: /assets/img/team/MariaDyatchyna.jpg
-    mail: maria@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
-    latlong:
-      type: Point
-      coordinates:
-        - 30.51481603417014
-        - 50.436699619840184
-    text: >
-      Maria utilizes her significant experience in business development and
-      deal-making to keep Aero Fleet One ahead of the game. She is the person to
-      contact for any of our international affairs.
-  - full_name: Allan Dosan
-    active: true
-    title: Tech and Market Development
-    img: /assets/img/team/AllanDosan.jpg
-    mail: allan@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/allandosan/
-    latlong:
-      type: Point
-      coordinates:
-        - -93.26148006478746
-        - 44.98306165100913
-    text: >
-      Allan brings his strong background in IT integrations and cybersecurity to
-      Aero Fleet One. He acts as our point person for all things UAS. He is our
-      resident futurist, exploring new market possibilities.
-  - full_name: Mark Erjavec
-    active: true
-    title: Finance
-    img: /assets/img/team/MarkErjavec.jpg
-    mail: mark@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/markerjavec/
-    latlong:
-      type: Point
-      coordinates:
-        - -105.01637690875211
-        - 39.74883535119338
-    text: >
-      Mark has provided the seed and continues to help this vision grow. While
-      managing our funding and resources, he keeps us all on track
-  - full_name: Ana Garcia
-    active: true
-    title: Business Development Latin America
-    img: /assets/img/team/AnaGarcia.jpg
-    mail: ana@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/ana-garcia4/
-    latlong:
-      type: Point
-      coordinates:
-        - -47.82099
-        - -21.15878
-    text: Ana is an experienced business manager in the fields of agriculture and
-      aviation. She helps develop and implement our business strategy in Central
-      and South America.
-  - full_name: Yuriy Sherayzen
-    active: false
-    title: Strategist
-    img: /assets/img/team/YuriySherayzen.png
-    mail: yuriy@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
-    latlong:
-      type: Point
-      coordinates:
-        - -93.36829
-        - 44.94361
-    text: Yuriy is an experienced business analyst who helps guide our team as we
-      move  forward with mergers and acquisitions.
-  - full_name: Dionas Silva
-    active: true
-    title: Brazilian Representative
-    img: /assets/img/team/DionasSilva.jpg
-    mail: dionas@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
-    latlong:
-      type: Point
-      coordinates:
-        - -47.820839
-        - -21.17663
-    text: As an expert agronomist and an experienced UAS pilot, Dionas is our
-      pioneer in Brazil. He manages partnership relations in the Brazilian drone
-      and agtech spaces.
-  - full_name: Matheus Picinin
-    active: true
-    title: Marketing Coordinator
-    img: /assets/img/team/MatheusPicinin.jpg
-    mail: matheus@aerofleetone.com
-    linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
-    latlong:
-      type: Point
-      coordinates:
-        - -6.26031
-        - 53.349804
-    text: Matheus uses his experience and training in digital media marketing to
-      shape our brand and online presence. He manages our content staff and
-      press relations.
-  - full_name: Matthew Lessard
-    active: true
-    title: Strategic Advisor
-    img: /assets/img/team/MatthewLessard.jpg
-    linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
-    latlong:
-      type: Point
-      coordinates:
-        - -94.047492
-        - 44.1835832
-    text: Based in Minnesota, Matthew is an executive leader and entrepreneur with
-      over 20 years of business management, financial oversight and analysis,
-      business development, private equity, and international business
-      experience in various countries including the US, Brazil, Mexico, and
-      Europe.
+    - full_name: Simon Testing
+      location:
+      title: Chief Tester Test
+      mail: test@aerofleetone.com
+      linkedin: https://hello.com
+      text: Hello Bio
+      active: true
+    - full_name: Destiny West
+      location: '{"type":"Feature","geometry":{"type": "Point","coordinates":[-104.981852, 39.77137]},"properties":{"name": "Dinagat Islands"}}'
+      active: true
+      title: President
+      img: /assets/img/team/DestinyWest.jpg
+      mail: destiny@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
+      latlong:
+          type: Point
+          coordinates:
+              - -104.981852
+              - 39.77137
+      text: >
+          A passion for aviation motivates Destiny as she enacts our ambitious
+          business plan. She is our main public voice, administrative organizer, and
+          strategic fulcrum.
+    - full_name: Greg Maud
+      location:
+      active: true
+      title: Corporate Development
+      img: /assets/img/team/GregMaud.jpg
+      mail: greg@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/greg-maud-8271881b/
+      latlong:
+          type: Point
+          coordinates:
+              - -105.216019
+              - 39.749668
+      text: >
+          Greg brings over 20 years international experience in strategy and
+          corporate development to Aero Fleet One. He helps develop and implement
+          our acquisition strategy.
+    - full_name: Maria Dyatchyna
+      location:
+      active: true
+      title: Research and Expansion
+      img: /assets/img/team/MariaDyatchyna.jpg
+      mail: maria@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
+      latlong:
+          type: Point
+          coordinates:
+              - 30.51481603417014
+              - 50.436699619840184
+      text: >
+          Maria utilizes her significant experience in business development and
+          deal-making to keep Aero Fleet One ahead of the game. She is the person to
+          contact for any of our international affairs.
+    - full_name: Allan Dosan
+      location:
+      active: true
+      title: Tech and Market Development
+      img: /assets/img/team/AllanDosan.jpg
+      mail: allan@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/allandosan/
+      latlong:
+          type: Point
+          coordinates:
+              - -93.26148006478746
+              - 44.98306165100913
+      text: >
+          Allan brings his strong background in IT integrations and cybersecurity to
+          Aero Fleet One. He acts as our point person for all things UAS. He is our
+          resident futurist, exploring new market possibilities.
+    - full_name: Mark Erjavec
+      location:
+      active: true
+      title: Finance
+      img: /assets/img/team/MarkErjavec.jpg
+      mail: mark@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/markerjavec/
+      latlong:
+          type: Point
+          coordinates:
+              - -105.01637690875211
+              - 39.74883535119338
+      text: >
+          Mark has provided the seed and continues to help this vision grow. While
+          managing our funding and resources, he keeps us all on track
+    - full_name: Ana Garcia
+      location:
+      active: true
+      title: Business Development Latin America
+      img: /assets/img/team/AnaGarcia.jpg
+      mail: ana@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/ana-garcia4/
+      latlong:
+          type: Point
+          coordinates:
+              - -47.82099
+              - -21.15878
+      text:
+          Ana is an experienced business manager in the fields of agriculture and
+          aviation. She helps develop and implement our business strategy in Central
+          and South America.
+    - full_name: Yuriy Sherayzen
+      location:
+      active: false
+      title: Strategist
+      img: /assets/img/team/YuriySherayzen.png
+      mail: yuriy@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
+      latlong:
+          type: Point
+          coordinates:
+              - -93.36829
+              - 44.94361
+      text:
+          Yuriy is an experienced business analyst who helps guide our team as we
+          move  forward with mergers and acquisitions.
+    - full_name: Dionas Silva
+      location:
+      active: true
+      title: Brazilian Representative
+      img: /assets/img/team/DionasSilva.jpg
+      mail: dionas@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
+      latlong:
+          type: Point
+          coordinates:
+              - -47.820839
+              - -21.17663
+      text: As an expert agronomist and an experienced UAS pilot, Dionas is our
+          pioneer in Brazil. He manages partnership relations in the Brazilian drone
+          and agtech spaces.
+    - full_name: Matheus Picinin
+      location:
+      active: true
+      title: Marketing Coordinator
+      img: /assets/img/team/MatheusPicinin.jpg
+      mail: matheus@aerofleetone.com
+      linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
+      latlong:
+          type: Point
+          coordinates:
+              - -6.26031
+              - 53.349804
+      text:
+          Matheus uses his experience and training in digital media marketing to
+          shape our brand and online presence. He manages our content staff and
+          press relations.
+    - full_name: Matthew Lessard
+      location:
+      active: true
+      title: Strategic Advisor
+      img: /assets/img/team/MatthewLessard.jpg
+      linkedin: https://www.linkedin.com/in/matthew-lessard-4b73ab/
+      latlong:
+          type: Point
+          coordinates:
+              - -94.047492
+              - 44.1835832
+      text:
+          Based in Minnesota, Matthew is an executive leader and entrepreneur with
+          over 20 years of business management, financial oversight and analysis,
+          business development, private equity, and international business
+          experience in various countries including the US, Brazil, Mexico, and
+          Europe.
