--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,7 +19,7 @@ collections:
             }
           - { label: "Title", name: "title", widget: "string" }
           - {
-                label: "Published",
+                label: "Active",
                 name: "published",
                 widget: "boolean",
                 default: false,
