--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
     name: git-gateway
     branch: admin
+publish_mode: editorial_workflow
 media_folder: "assets/uploads"
 collections:
     - name: "blog"
@@ -18,12 +19,6 @@ collections:
                 default: "blog",
             }
           - { label: "Title", name: "title", widget: "string" }
-          - {
-                label: "Active",
-                name: "published",
-                widget: "boolean",
-                default: false,
-            }
           - { label: "Image", name: "img", widget: "image", required: false }
           - { label: "Body", name: "body", widget: "markdown" }
           - { label: "Tags", name: tags", widget: "list", allow_add: true }
